--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -16,10 +16,12 @@ services:
 
   redis:
     image: 'redis:alpine'
-    command: redis-server
+    command: redis-server --appendonly yes
     ports:
       - '6379:6379'
-
+    volumes:
+        - ./storage/redis/data:/data
+    restart: always
 
 volumes:
   chatsystem-mysql-data:
