--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -23,5 +23,45 @@ services:
         - ./storage/redis/data:/data
     restart: always
 
+  es01:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.3
+    container_name: es01
+    environment:
+      - node.name=es-node
+      - cluster.name=es-docker-cluster
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - es-data:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+    # networks:
+    #   - elastic
+
+  # kibana:
+  #   image: docker.elastic.co/kibana/kibana:7.8.1
+  #   container_name: kibana
+  #   environment:
+  #     ELASTICSEARCH_URL: http://localhost:9200
+  #     ELASTICSEARCH_HOSTS: http://localhost:9200
+  #   ports:
+  #     - 5601:5601
+  #   networks:
+  #     - elastic
+  #   depends_on:
+  #     - es01
+  #   links:
+  #     - es01
 volumes:
   chatsystem-mysql-data:
+  es-data:
+    driver: local
+
+# networks:
+#   elastic:
+#     driver: bridge
