--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -25,7 +25,7 @@ services:
 
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.16.3
-    container_name: es01
+    container_name: elasticsearch
     environment:
       - node.name=es-node
       - cluster.name=es-docker-cluster
@@ -40,28 +40,33 @@ services:
       - es-data:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
-    # networks:
-    #   - elastic
 
-  # kibana:
-  #   image: docker.elastic.co/kibana/kibana:7.8.1
-  #   container_name: kibana
-  #   environment:
-  #     ELASTICSEARCH_URL: http://localhost:9200
-  #     ELASTICSEARCH_HOSTS: http://localhost:9200
-  #   ports:
-  #     - 5601:5601
-  #   networks:
-  #     - elastic
-  #   depends_on:
-  #     - es01
-  #   links:
-  #     - es01
+  sidekiq:
+    build: .
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec sidekiq -q default"
+    depends_on:
+      - redis
+    links:
+      - redis
+    volumes:
+      - .:/myapp
+    env_file:
+      - .env
+  backend:
+    container_name: chatsystem-backend-c
+    image: chatsystem-backend-i
+    command: bash -c "(rake db:migrate || rake db:setup) && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    build: .
+    ports:
+      - "3000:3000"
+    env_file:
+      - .env
+    depends_on:
+      - mysql
+      - redis
+      - es01
+
 volumes:
   chatsystem-mysql-data:
   es-data:
     driver: local
-
-# networks:
-#   elastic:
-#     driver: bridge
